--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "init-firebase": "node scripts/init-firebase.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -45,7 +46,9 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.1",
     "embla-carousel-react": "^8.3.0",
+    "firebase": "^12.0.0",
     "framer-motion": "^12.6.5",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
